Files name change

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ewr",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "middleMan.js",
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node middleMan.js",
+    "server": "nodemon middleMan.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client        && npm run build --prefix client",
